W06 01
added various errors and validation
